[gd_scene load_steps=5 format=3 uid="uid://23d48043kb4t"]

[ext_resource type="Script" uid="uid://b8rlip0gukv8i" path="res://cle.gd" id="1_j24ja"]
[ext_resource type="FontFile" uid="uid://djfbke8b4o6dx" path="res://images/something.ttf" id="2_1gs8f"]
[ext_resource type="Texture2D" uid="uid://ofy4l7gpuoes" path="res://images/star1.png" id="3_mpf8o"]

[sub_resource type="GDScript" id="GDScript_upmy7"]

[node name="cle" type="Node2D"]
script = ExtResource("1_j24ja")

[node name="ColorRect2" type="ColorRect" parent="."]
offset_left = -510.0
offset_top = -423.0
offset_right = 1058.242
offset_bottom = 422.94226
scale = Vector2(0.64360803, 1.0201359)
size_flags_stretch_ratio = 0.0
color = Color(0.97712725, 0.66482943, 0, 1)

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -469.0
offset_top = -387.00003
offset_right = 1099.242
offset_bottom = 458.94223
scale = Vector2(0.5847313, 0.9325754)
size_flags_stretch_ratio = 0.0
color = Color(0.892568, 0.7818529, 1, 1)

[node name="clear" type="RichTextLabel" parent="."]
custom_minimum_size = Vector2(36, 0)
offset_left = -485.0
offset_top = -322.0
offset_right = -326.66666
offset_bottom = -298.77777
scale = Vector2(6, 6)
size_flags_horizontal = 3
size_flags_vertical = 0
size_flags_stretch_ratio = 20.0
localize_numeral_system = false
theme_override_fonts/normal_font = ExtResource("2_1gs8f")
theme_override_font_sizes/normal_font_size = 16
text = "LEVEL CLEARED!"
scroll_active = false
autowrap_mode = 0
tab_size = 1
horizontal_alignment = 1
script = SubResource("GDScript_upmy7")

[node name="moves" type="RichTextLabel" parent="."]
custom_minimum_size = Vector2(36, 0)
offset_left = -478.0
offset_top = -181.0
offset_right = 469.0
offset_bottom = -61.0
size_flags_horizontal = 3
size_flags_vertical = 0
size_flags_stretch_ratio = 20.0
localize_numeral_system = false
theme_override_fonts/normal_font = ExtResource("2_1gs8f")
theme_override_font_sizes/normal_font_size = 72
text = "Moves:
"
scroll_active = false
autowrap_mode = 0
tab_size = 1
horizontal_alignment = 1
script = SubResource("GDScript_upmy7")

[node name="back" type="Button" parent="."]
offset_left = -203.0
offset_top = 108.0
offset_right = 219.0
offset_bottom = 215.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0.7891721, 0.7891721, 0.78917205, 1)
theme_override_colors/font_hover_color = Color(0.8517688, 0.8517689, 0.8517693, 1)
theme_override_fonts/font = ExtResource("2_1gs8f")
theme_override_font_sizes/font_size = 72
text = "Next level"
flat = true

[node name="quit" type="Button" parent="."]
offset_left = -186.0
offset_top = 199.0
offset_right = 209.0
offset_bottom = 306.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0.7891721, 0.7891721, 0.78917205, 1)
theme_override_colors/font_hover_color = Color(0.8517688, 0.8517689, 0.8517693, 1)
theme_override_fonts/font = ExtResource("2_1gs8f")
theme_override_font_sizes/font_size = 72
text = "Main menu"
flat = true

[node name="star1" type="Sprite2D" parent="."]
position = Vector2(-175, 29.999998)
scale = Vector2(5, 5)
texture = ExtResource("3_mpf8o")

[node name="star2" type="Sprite2D" parent="."]
position = Vector2(-4.5474735e-13, 5.684342e-14)
scale = Vector2(5, 5)
texture = ExtResource("3_mpf8o")

[node name="star3" type="Sprite2D" parent="."]
position = Vector2(175, 31)
scale = Vector2(5, 5)
texture = ExtResource("3_mpf8o")
